log
Sat 24 Sep 2022 09:17:34 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap  new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9b1cf2e
Sat 24 Sep 2022 09:17:49 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap  new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
adfc744
Sat 24 Sep 2022 09:18:20 PM UTC: 
 treemap.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0eb827c
Sat 24 Sep 2022 09:18:33 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |   new->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   new->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   new->lower_than = lower_than;
      |      ^~
treemap.c:44:10: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   44 |   return new;
      |          ^~~
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
37ec6a6
Sat 24 Sep 2022 09:18:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:3: error: conversion to non-scalar type requested
   40 |   TreeMap *new = (TreeMap)malloc(sizeof(TreeMap));
      |   ^~~~~~~
Compilation failed
170eba0
Sat 24 Sep 2022 09:19:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
809e218
Sat 24 Sep 2022 09:24:55 PM UTC: 
 treemap.c | 37 ++++++++++++++++++++++++++++++++++++-
 1 file changed, 36 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
139761a
Sat 24 Sep 2022 09:25:42 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:72:10: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
   72 |   return minimun(x);
      |          ^~~~~~~
      |          minimum
treemap.c:72:10: error: returning ‘int’ from a function with return type ‘TreeNode *’ makes pointer from integer without a cast [-Werror=int-conversion]
   72 |   return minimun(x);
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
031ed4d
Sat 24 Sep 2022 09:25:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
82e4a82
Sat 24 Sep 2022 09:30:12 PM UTC: 
 treemap.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
db519f6
Sat 24 Sep 2022 09:31:58 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
10f4bc1
